--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+<head>
 
+</head>
+<link rel="stylesheet" type="text/css" href="/main.css">
+<body>
+	<img src="/cloud_upload.gif" height="100%" width="100%">
+	<h1>
+		Welcome to Oracle Cloud Storage. Try now for free and get up to 3500 hours.
+	</h1>
+	<button class="trial-button"><a href="cloud.oracle.com">Try Now</a></button>
+
+</body>
+
+
+
+</html>
