--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <link rel="stylesheet" type="text/css" href="/main.css">
 <body>
-	<img src="/cloud_upload.gif" height="100%" width="100%">
+	<img src="/cloud.jpg" height="100%" width="100%">
 	<h1>
 		Welcome to Oracle Cloud Storage. Try now for free and get up to 3500 hours.
 	</h1>
