--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	<script src="/main.js"></script>
 </head>
-<link rel="stylesheet" type="text/css" href="/main.css">
 <body>
-	<img src="/cloud.jpg" height="100%" width="100%">
+	<div id="app">
 	<h1>
-		Welcome to Oracle Cloud Storage. Try now for free and get up to 3500 hours.
+		{{ message }}
 	</h1>
-	<button class="trial-button"><a href="cloud.oracle.com">Try Now</a></button>
+</div>
 
 </body>
 
