--- a/index.html
+++ b/index.html
@@ -22,11 +22,19 @@
   <!-- vue -->
   <section id="app" class="section container">
     <h1 class="title">
-      Hi my name is {{ name }} and my message is: {{ message }}
-    </h1>
+      Welcome to Kitty Kustomization! Create your dream version of a stylin cat.
+<br>
+</h1>
+<h2>
+      My cat's name: {{ name }}
+<br>
+      My cat's motto: {{ message }}
+    </h2>
 
     <input type="text" class="input" v-model="name">
     <input type="text" class="input" v-model="message">
+
+
   </section>
 
   <!-- our javascript -->
